--- a/make/fragments/tasks/clean_py.toml
+++ b/make/fragments/tasks/clean_py.toml
@@ -20,41 +20,41 @@ run_task = [
 [tasks.clean_py_all]
 category = "01 - Clean"
 private = true
-command = "python3"
+command = "python"
 args = ["${CLEAN_PY}", "${PROJECT_TABSDATA_ROOT_FOLDER}", "py"]
 
 [tasks.clean_py_ta_features]
 category = "01 - Clean"
 private = true
-command = "python3"
+command = "python"
 args = ["${CLEAN_PY}", "${PROJECT_PY_TA_FEATURES_FOLDER}", "py"]
 
 [tasks.clean_py_ta_tableframe]
 category = "01 - Clean"
 private = true
-command = "python3"
+command = "python"
 args = ["${CLEAN_PY}", "${PROJECT_PY_TA_TABLEFRAME_FOLDER}", "py"]
 
 [tasks.clean_py_te_tableframe]
 category = "01 - Clean"
 private = true
-command = "python3"
+command = "python"
 args = ["${CLEAN_PY}", "${PROJECT_PY_TE_TABLEFRAME_FOLDER}", "py"]
 
 [tasks.clean_py_tabsdata]
 category = "01 - Clean"
 private = true
-command = "python3"
+command = "python"
 args = ["${CLEAN_PY}", "${PROJECT_PY_TD_SDK_FOLDER}", "py"]
 
 [tasks.clean_py_tabsdata_mongodb]
 category = "01 - Clean"
 private = true
-command = "python3"
+command = "python"
 args = ["${CLEAN_PY}", "${PROJECT_PY_TABSDATA_MONGODB_FOLDER}", "py"]
 
 [tasks.clean_py_tabsdata_salesforce]
 category = "01 - Clean"
 private = true
-command = "python3"
+command = "python"
 args = ["${CLEAN_PY}", "${PROJECT_PY_TABSDATA_SALESFORCE_FOLDER}", "py"]
