--- a/server/libraries/td-authz/Cargo.toml
+++ b/server/libraries/td-authz/Cargo.toml
@@ -56,6 +56,7 @@ async-trait = { workspace = true }
 tokio = { workspace = true }
 log = "0.4.26"
 itertools = "0.10.5"
+sqlx = { workspace = true }
 
 [dev-dependencies]
 td-objects = { workspace = true, features = ["td-test"] }
