--- a/macros/facets/td-type/Cargo.toml
+++ b/macros/facets/td-type/Cargo.toml
@@ -3,7 +3,7 @@
 #
 
 [package]
-description = "Tabsdata Typing Utilities Macro"
+description = "Tabsdata Typing Utilities Macros"
 name = "td-type"
 
 authors = { workspace = true }
@@ -31,27 +31,14 @@ dummy = []
 
 # Internal dependencies
 
-td-apiforge = { workspace = true }
 td-shared = { workspace = true }
 
 # External dependencies
 
-chrono = { workspace = true, features = ["serde"] }
 darling = { workspace = true }
-derive_builder = { workspace = true }
-getset = { workspace = true }
-lazy_static = { workspace = true }
 proc-macro2 = { workspace = true }
 quote = { workspace = true }
-regex = { workspace = true }
-serde = { workspace = true, features = ["derive"] }
-sqlx = { workspace = true, features = ["sqlite", "runtime-tokio", "macros", "chrono"] }
-strum = { workspace = true }
-strum_macros = { workspace = true }
 syn = { workspace = true, features = ["full"] }
-thiserror = { workspace = true }
-tokio = { workspace = true, features = ["full"] }
-utoipa = { workspace = true, features = ["uuid"] }
 
 [target.'cfg(target_os = "linux")'.dependencies]
 openssl = { workspace = true, features = ["vendored"] }
