--- a/server/libraries/td-error/Cargo.toml
+++ b/server/libraries/td-error/Cargo.toml
@@ -51,6 +51,7 @@ tm-error = { workspace = true }
 # External dependencies
 
 anyhow = { workspace = true }
+itertools = { workspace = true }
 strum = { workspace = true }
 strum_macros = { workspace = true }
 thiserror = { workspace = true }
