--- a/extensions/rust/te-execution/Cargo.toml
+++ b/extensions/rust/te-execution/Cargo.toml
@@ -1,10 +1,10 @@
 #
-# Copyright 2024 Tabs Data Inc.
+# Copyright 2025 Tabs Data Inc.
 #
 
 [package]
-description = "Tabsdata Transaction Extension Implementation - Standard"
-name = "te-transaction"
+description = "Tabsdata Execution Extension Implementation - Standard"
+name = "te-execution"
 build = "build.rs"
 
 authors = { workspace = true }
@@ -34,13 +34,22 @@ ignored = ["openssl"]
 
 # Internal dependencies
 
-td-common = { workspace = true }
+ta-execution = { workspace = true }
+td-error = { workspace = true }
+td-objects = { workspace = true }
 
 # External dependencies
 
-serde = { workspace = true, features = ["derive"] }
+async-trait = { workspace = true }
+petgraph = { workspace = true }
 strum = { workspace = true }
 strum_macros = { workspace = true }
+
+# Development dependencies
+
+[dev-dependencies]
+ta-execution = { workspace = true, features = ["td-test"] }
+td-objects = { workspace = true, features = ["td-test"] }
 
 [target.'cfg(target_os = "linux")'.dependencies]
 openssl = { workspace = true, features = ["vendored"] }
