--- a/server/libraries/td-services/Cargo.toml
+++ b/server/libraries/td-services/Cargo.toml
@@ -41,16 +41,22 @@ ignored = ["openssl", "strum_macros", "thiserror", "tower"]
 
 ## Macros
 
-td-error = { workspace = true }
 
 ## Libraries
 
+ta-execution = { workspace = true }
 td-authz = { workspace = true }
 td-common = { workspace = true }
 td-database = { workspace = true }
+td-error = { workspace = true }
+td-execution = { workspace = true }
 td-objects = { workspace = true }
 td-security = { workspace = true }
 td-tower = { workspace = true }
+
+## Extensions
+
+te-execution = { workspace = true }
 
 # External dependencies
 
