--- a/server/binaries/td-server/Cargo.toml
+++ b/server/binaries/td-server/Cargo.toml
@@ -112,6 +112,7 @@ tm-workspace = { workspace = true }
 
 ## Libraries
 
+td-authz = { workspace = true }
 td-common = { workspace = true }
 td-database = { workspace = true }
 td-error = { workspace = true }
